--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -1,4 +1,24 @@
 <resources>
-    <string name="app_name">Attendance-Manager</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Teacher</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="sign_in">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="sign_in_or_register">Sign in or register</string>
+    <string name="or">or</string>
+    <string name="register">Register</string>
+    <string name="first_name">First name</string>
+    <string name="last_name">Last name</string>
+    <string name="uid">UID</string>
+    <string name="dept_id">Department ID</string>
+    <string name="dept">Department</string>
+    <string name="passwords_do_not_match">Passwords do not match</string>
 </resources>
