--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="dept_id">Department ID</string>
     <string name="dept">Department</string>
     <string name="passwords_do_not_match">Passwords do not match</string>
+    <string name="home">Home</string>
+    <string name="settings">Settings</string>
+    <string name="preferences">Preferences</string>
+    <string name="courses">Courses</string>
 </resources>
