Allow setting the backend server URL on debug builds

--- a/student/src/main/res/values/strings.xml
+++ b/student/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="preferences">Preferences</string>
     <string name="calendar">Calendar</string>
     <string name="courses">Courses</string>
+    <string name="invalid">Invalid input</string>
 </resources>
