--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="settings">Settings</string>
     <string name="preferences">Preferences</string>
     <string name="courses">Courses</string>
+    <string name="invalid">Invalid input</string>
 </resources>
