--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="preferences">Preferences</string>
     <string name="courses">Courses</string>
     <string name="invalid">Invalid input</string>
+    <string name="nothing_to_show">Nothing to show</string>
+    <string name="no_courses">No courses found</string>
 </resources>
