--- a/student/src/main/res/values/strings.xml
+++ b/student/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="calendar">Calendar</string>
     <string name="courses">Courses</string>
     <string name="invalid">Invalid input</string>
+    <string name="no_courses">No courses found</string>
 </resources>
