--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="invalid">Invalid input</string>
     <string name="nothing_to_show">Nothing to show</string>
     <string name="no_courses">No courses found</string>
+    <string name="welcome">Welcome</string>
 </resources>
