--- a/student/src/main/res/values/strings.xml
+++ b/student/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Student</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="app_description">Face recognition Attendance Management app</string>
 
     <!-- Strings related to login -->
     <string name="username">Username</string>
@@ -21,6 +21,7 @@
     <string name="dept_id">Department ID</string>
     <string name="dept">Department</string>
     <string name="passwords_do_not_match">Passwords do not match</string>
+
     <string name="home">Home</string>
     <string name="preferences">Preferences</string>
     <string name="calendar">Calendar</string>
@@ -28,4 +29,8 @@
     <string name="invalid">Invalid input</string>
     <string name="no_courses">No courses found</string>
     <string name="welcome">Welcome</string>
+
+    <string name="replay_intro">Replay Intro</string>
+    <string name="about">About</string>
+    <string name="logout">Log out</string>
 </resources>
