--- a/student/src/main/res/values/strings.xml
+++ b/student/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="replay_intro">Replay Intro</string>
     <string name="about">About</string>
     <string name="logout">Log out</string>
+    <string name="student">Student</string>
 </resources>
