--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Teacher</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="app_description">Face recognition Attendance Management app</string>
 
     <!-- Strings related to login -->
     <string name="username">Username</string>
@@ -21,6 +21,7 @@
     <string name="dept_id">Department ID</string>
     <string name="dept">Department</string>
     <string name="passwords_do_not_match">Passwords do not match</string>
+
     <string name="home">Home</string>
     <string name="settings">Settings</string>
     <string name="preferences">Preferences</string>
@@ -29,4 +30,9 @@
     <string name="nothing_to_show">Nothing to show</string>
     <string name="no_courses">No courses found</string>
     <string name="welcome">Welcome</string>
+
+    <string name="replay_intro">Replay Intro</string>
+    <string name="about">About</string>
+    <string name="logout">Log out</string>
+    <string name="teacher">Teacher</string>
 </resources>
