--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="courses">Courses</string>
     <string name="invalid">Invalid input</string>
     <string name="nothing_to_show">Nothing to show</string>
+    <string name="search_courses">Search courses</string>
+    <string name="no_results">No results</string>
     <string name="no_courses">No courses found</string>
     <string name="welcome">Welcome</string>
     <string name="back_press_prompt">Press back again to exit</string>
@@ -43,5 +45,5 @@
     <string name="year">Year</string>
     <string name="departments">Department</string>
     <string name="create_course">Create course</string>
-    <string name="search_courses">Search courses</string>
+
 </resources>
