--- a/student/src/main/res/values/strings.xml
+++ b/student/src/main/res/values/strings.xml
@@ -26,6 +26,9 @@
     <string name="preferences">Preferences</string>
     <string name="calendar">Calendar</string>
     <string name="courses">Courses</string>
+    <string name="enrolled">Enrolled</string>
+    <string name="available">Available</string>
+
     <string name="invalid">Invalid input</string>
     <string name="no_courses">No courses found</string>
     <string name="welcome">Welcome</string>
