[student] Implement search functionality

--- a/student/src/main/res/values/strings.xml
+++ b/student/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="enroll">Enroll</string>
     <string name="course_details">Course details</string>
     <string name="please_wait">Please wait…</string>
+    <string name="no_results">No results</string>
 </resources>
