--- a/student/src/main/res/values/strings.xml
+++ b/student/src/main/res/values/strings.xml
@@ -21,7 +21,12 @@
     <string name="dept_id">Department ID</string>
     <string name="dept">Department</string>
     <string name="passwords_do_not_match">Passwords do not match</string>
+    <string name="post_registration">Successfully registered. Please log in</string>
+    <string name="login_error">Error in login</string>
+    <string name="registration_failed">Failed to register</string>
 
+    <string name="student">Student</string>
+    <string name="search_courses">Search courses</string>
     <string name="home">Home</string>
     <string name="preferences">Preferences</string>
     <string name="calendar">Calendar</string>
@@ -34,11 +39,11 @@
     <string name="welcome">Welcome</string>
     <string name="back_press_prompt">Press back again to exit</string>
 
+    <string name="update_face">Update face scan</string>
     <string name="replay_intro">Replay Intro</string>
     <string name="about">About</string>
     <string name="logout">Log out</string>
-    <string name="student">Student</string>
-    <string name="search_courses">Search courses</string>
+
     <string name="enroll">Enroll</string>
     <string name="course_details">Course details</string>
     <string name="please_wait">Please wait…</string>
