--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -62,5 +62,6 @@
     <string name="course_details">Course details</string>
     <string name="select_start_time">start</string>
     <string name="create_lecture">Create Lecture</string>
+    <string name="take_attendance">Take Attendance</string>
 
 </resources>
