[teacher] Classroom fetching added in lecture/create/ endpoint

--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="select_start_time">start</string>
     <string name="create_lecture">Create Lecture</string>
     <string name="take_attendance">Take Attendance</string>
+    <string name="classroom">Classroom</string>
 
 </resources>
