--- a/student/src/main/res/values/strings.xml
+++ b/student/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="total_lectures">Total lectures</string>
     <string name="lectures_attended">Lectures attended</string>
     <string name="lectures_missed">Lectures missed</string>
+    <string name="error">An error was encountered. Try again later</string>
 </resources>
