--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -65,4 +65,8 @@
     <string name="take_attendance">Take Attendance</string>
     <string name="classroom">Classroom</string>
 
+    <string name="backend_channel_name">Server alerts</string>
+    <string name="backend_channel_description">Notifications and alerts sent by backend server</string>
+    <string name="backend_channel_id">backend_channel_id</string>
+
 </resources>
