[teacher] re-enrollment added

--- a/teacher/src/main/res/values/strings.xml
+++ b/teacher/src/main/res/values/strings.xml
@@ -50,11 +50,14 @@
     <string name="create_course">Create course</string>
 
     <string name="enrolled_students">Enrolled Students</string>
-    <string name="enrollment_on_text">Enrollment is ongoing. You can create lectures only when enrollment is stopped. Press the button below to stop enrollment. Note that students cannot enroll once you have stopped enrollment.</string>
+    <string name="enrollment_on_text">Enrollment is ongoing. You can create lectures only when enrollment is stopped. Press the button below to stop enrollment.</string>
+    <string name="enrollment_off_text">Enrollment is stopped. Students can enroll only when enrollment is stopped. Press the button below to start enrollment.</string>
     <string name="stop_enrollment">Stop enrollment</string>
+    <string name="start_enrollment">Start enrollment</string>
     <string name="lectures">Lectures</string>
     <string name="no_lectures">No lectures created</string>
     <string name="confirm_stop_enrollment">Confirm stop enrollment?</string>
+    <string name="confirm_start_enrollment">Confirm start enrollment?</string>
     <string name="action_undone">This action cannot be undone.</string>
     <string name="cancel">Cancel</string>
     <string name="no_students">No students</string>
